--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,7 +15,8 @@
  */
  @import "font-awesome.min";
  @import "animate";
- @import "bootstrap";
+ @import "bootstrap.min";
+ @import 'bootstrap';
  @import "jplayer.pink.flag";
  @import "superfish";
  @import "megafish";
