--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,10 +1,5 @@
 /*
 
-Theme Name: Musik.
-Description: Responsive Multipurpose HTML Theme.
-Version: 1.0
-Author: Themesquared
-Website: http://themeforest.net/themesquared
 
 */
 
@@ -13,22 +8,22 @@ Website: http://themeforest.net/themesquared
 
 	1. GLOBAL STYLES
 	2. HEADER
-	3. INTRO 
-	4. EXTRAS 
-	5. SERVICES 
-	6. NEWS 
-	7. PLAYLIST 
-	8. ALBUMS 
-	9. TOURS 
-	10. TEAM 
+	3. INTRO
+	4. EXTRAS
+	5. SERVICES
+	6. NEWS
+	7. PLAYLIST
+	8. ALBUMS
+	9. TOURS
+	10. TEAM
 	11. PORTFOLIO / GALLERY
-	12. CONTACT 
-	13. TWITTERFEED 
-	14. CLIENTS 
-	15. FOOTER 
-	16. SUBPAGE 
+	12. CONTACT
+	13. TWITTERFEED
+	14. CLIENTS
+	15. FOOTER
+	16. SUBPAGE
 	17. RESPONSIVE STYLES
-	
+
 -------------------------------------------------------------------*/
 
 /* 1. GLOBAL STYLES */
@@ -550,7 +545,7 @@ header {
 /* 3. INTRO */
 
 #intro {
-	background: #222 url(../images/intro.jpg) no-repeat center center;
+	background: #222 url('../assets/intro.jpg') no-repeat center center;
 	background-size: cover;
 	padding: 295px 0 245px;
 	position: relative;
@@ -824,7 +819,7 @@ header {
 
 .playlist-wrap {
 	padding: 120px 80px 120px;
-	background: url(../images/playlist.jpg) no-repeat top left;
+	background: url('../assets/playlist.jpg') no-repeat top left;
 	background-size: cover;
 	display: table;
 	width: 100%;
@@ -1428,7 +1423,7 @@ header {
 /* 13. TWITTERFEED */
 
 .twitter-wrap {
-	background: url(../images/twitter.jpg) no-repeat center fixed;
+	background: url('../assets/twitter.jpg') no-repeat center fixed;
 	background-size: cover;
 	padding: 100px 0;
 }
