--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -68,7 +68,7 @@
 					<div id="news-grid">
 						<div class="news-item col-md-4">
 							<div class="ni-wrap">
-								<img src="images/blog/1.jpg" class="img-responsive" alt=""/>
+								<%= image_tag '1.jpg', class: 'img-responsive ' %>
 								<h4><a href="single-blog-fullwidth.html">Meet our musik stars</a></h4>
 								<div class="news-meta">
 									<span><i class="fa fa-clock-o"></i> Feb 7, 2016</span>
@@ -82,7 +82,7 @@
 
 						<div class="news-item col-md-4">
 							<div class="ni-wrap">
-								<img src="images/blog/2.jpg" class="img-responsive" alt=""/>
+								<%= image_tag '2.jpg', class: 'img-responsive ' %>
 								<h4><a href="single-blog-fullwidth.html">Live with musik concert</a></h4>
 								<div class="news-meta">
 									<span><i class="fa fa-clock-o"></i> Mar 15, 2016</span>
@@ -96,7 +96,7 @@
 
 						<div class="news-item col-md-4">
 							<div class="ni-wrap">
-								<img src="images/blog/3.jpg" class="img-responsive" alt=""/>
+								<%= image_tag '3.jpg', class: 'img-responsive ' %>
 								<h4><a href="single-blog-fullwidth.html">Its party time</a></h4>
 								<div class="news-meta">
 									<span><i class="fa fa-clock-o"></i> Apr 22, 2016</span>
