--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -187,6 +187,7 @@
 			<div class="album-card">
 				<div class="image hoverdir-target">
 					<img alt="image" src="images/album1.jpg">
+					<%= image_tag 'album1.jpg' %>
 					<div class="overlay" >
 						<div class="button-wrapper" >
 							<div class="view-button" >
@@ -204,7 +205,7 @@
 		<div class="col-md-3 col-sm-6 album-card-wrap nopadding">
 			<div class="album-card">
 				<div class="image hoverdir-target">
-					<img alt="image" src="images/album2.jpg" >
+					<%= image_tag 'album2.jpg' %>
 					<div class="overlay" >
 						<div class="button-wrapper" >
 							<div class="view-button" >
