--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,13 +53,13 @@
   						<div id="mobnav-btn"><i class="fa fa-bars"></i></div>
   						<ul class="sf-menu">
   							<li>
-  								<a class="page-scroll" href="#page-top">Home</a>
+                  <%= link_to 'Home', root_path class: "page-scroll" %>
   							</li>
   							<li><a class="page-scroll" href="#services">Services</a></li>
   							<li><a class="page-scroll" href="#news-wrap">Blog</a></li>
-  							<li><a class="page-scroll" href="#albums">Albums</a></li>
+                <li><%= link_to "Albums", albums_path %></li>
   							<li><a class="page-scroll" href="#tours">Events</a></li>
-  							<li><a class="page-scroll" href="#team-wrap">Genres</a></li>
+                <li><%= link_to "Genres", genres_path %></li>
   							<li><a class="page-scroll" href="#gallery">Lyrics Gallery</a></li>
   							<li><a class="page-scroll" href="#contact">Contact</a></li>
   						</ul>
