--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -221,7 +221,7 @@
 
 		<!-- Album Item -->
 		<div class="col-md-3 col-sm-6 album-card-wrap nopadding">
-			<% @genres.each do |genre| %>
+			<% Genre.all.each do |genre| %>
 
 
 
