--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,9 +34,9 @@
   <header>
   	<div class="container">
   		<div class="logo col-md-2 col-xs-4">
-
+        <%= link_to root_path do %>
           <%= image_tag 'logo.png', class: "img-responsive" %>
-          
+          <% end %>
   		</div>
   		<div class="col-md-10 col-xs-8 header-right">
   			<div class="row">
@@ -53,7 +53,7 @@
   						<div id="mobnav-btn"><i class="fa fa-bars"></i></div>
   						<ul class="sf-menu">
   							<li>
-                  <%= link_to 'Home', root_path class: "page-scroll" %>
+                  <%= link_to 'Home', root_path, class: "page-scroll" %>
   							</li>
   							<li><a class="page-scroll" href="#services">Services</a></li>
   							<li><a class="page-scroll" href="#news-wrap">Blog</a></li>
