--- a/app/views/albums/_form.html.erb
+++ b/app/views/albums/_form.html.erb
@@ -8,6 +8,7 @@
         <%= f.input :history %>
         <%= f.input :artist %>
         <%= f.input :year %>
+        <%= form.input :thumbnail, as: :file %>
         <%= f.collection_select :genre_id, Genre.all, :id, :type, {prompt: "Choose a Genre "} %>
         <%= f.submit :submit, class: "btn btn-default" %>
       </div>
