--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -23,7 +23,7 @@
 		<div class="col-md-3 col-sm-6 album-card-wrap nopadding">
 			<div class="album-card">
 				<div class="image hoverdir-target">
-					<%= image_tag "album1.jpg" %>
+				<%= image_tag genre.thumbnail.url(:medium) %>
 					<div class="overlay" >
 						<div class="button-wrapper" >
 							<div class="view-button" >
