--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,7 +58,7 @@
   							<li><a class="page-scroll" href="#services">Services</a></li>
   							<li><a class="page-scroll" href="#news-wrap">Blog</a></li>
   							<li><a class="page-scroll" href="#tours">Events</a></li>
-                <li><%= link_to "Genres", genres_path %></li>
+                <li><%= link_to "Genres", new_genres_path %></li>
   							<li><a class="page-scroll" href="#gallery">Lyrics Gallery</a></li>
   							<li><a class="page-scroll" href="#contact">Contact</a></li>
   						</ul>
