--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,14 +12,16 @@
  *= require_tree .
  *= require_self
  */
- @import "font-awesome.min";
+
  @import "animate";
  @import "bootstrap.min";
  @import "jplayer.pink.flag";
+ @import "font-awesome.min";
  @import "superfish";
  @import "megafish";
  @import "icon/style";
  @import "style";
+ @import "style1";
  @import "supersized";
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
 @import url('https://fonts.googleapis.com/css?family=Vollkorn:400,400italic,700,700italic');
