--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -23,28 +23,28 @@
 		<div class="row text-center">
 			<div class="col-md-3">
 				<div class="icon-box">
-					<i class="play-music"></i>
+					<i class="fa fa-music"></i>
 					<h3>Custom Player</h3>
 					<p>You have the ability to customize your player to your taste</p>
 				</div>
 			</div>
 			<div class="col-md-3">
 				<div class="icon-box">
-					<i class="play-pen"></i>
+					<i class="fa fa-pencil"></i>
 					<h3>Easy Customize</h3>
 					<p>You can easily modify and customize your app .</p>
 				</div>
 			</div>
 			<div class="col-md-3">
 				<div class="icon-box">
-					<i class="play-vynil"></i>
+					<i class="fa fa-play"></i>
 					<h3>Music Playlist</h3>
 					<p>Make a Playlist that defines you and your abilites.</p>
 				</div>
 			</div>
 			<div class="col-md-3">
 				<div class="icon-box">
-					<i class="play-photo2"></i>
+					<i class="fa fa-heartbeat"></i>
 					<h3>Custom genere</h3>
 					<p>.Customize the list of song that matches your explict taste</p>
 				</div>
