--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,8 +55,8 @@
   							<li>
                   <%= link_to 'Home', root_path, class: "page-scroll" %>
   							</li>
-  							<li><a class="page-scroll" href="#services">Services</a></li>
-  							<li><a class="page-scroll" href="#news-wrap">Blog</a></li>
+  							<li><%= link_to "Albums", albums_path %></li>
+                <li><%= link_to "Blog", blogs_path %></li>
   							<li><a class="page-scroll" href="#tours">Events</a></li>
                 <li><%= link_to "Genres", genres_path %></li>
   							<li><a class="page-scroll" href="#gallery">Lyrics Gallery</a></li>
