--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -44,7 +44,7 @@
 			</div>
 			<div class="col-md-3">
 				<div class="icon-box">
-					<i class="fa fa-heartbeat"></i>
+					<i class="fa fa-soundcloud"></i>
 					<h3>Custom genere</h3>
 					<p>.Customize the list of song that matches your explict taste</p>
 				</div>
