--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -9,11 +9,13 @@
  * compiled file so the styles you add here take precedence over styles defined in any styles
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
+ *= require bootstrap
  *= require_tree .
  *= require_self
  */
-
+ @import "bootstrap";
  @import "animate";
+ @import "bootstrap";
  @import "bootstrap.min";
  @import "jplayer.pink.flag";
  @import "font-awesome.min";
