--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,7 +57,7 @@
   							</li>
   							<li><%= link_to "Albums", albums_path %></li>
                 <li><%= link_to "Blog", blogs_path %></li>
-  							<li><a class="page-scroll" href="#tours">Events</a></li>
+  							<li><%= link_to "Events/tours", tours_path %></li>
                 <li><%= link_to "Genres", genres_path %></li>
   							<li><a class="page-scroll" href="#gallery">Lyrics Gallery</a></li>
   							<li><a class="page-scroll" href="#contact">Contact</a></li>
