--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -370,21 +370,20 @@
 <!-- CLIENTS -->
 <div class="music-social-icons-container">
 	<div class="music-social-icons text-center">
-		<%= link_to "clients/amazon.png"%>
-		<%= link_to "clients/bandcamp.png"%>
-		<%= link_to "clients/beatport.png"%>
-		<%= link_to "clients/bigcartel.png"%>
-		<%= link_to "clients/emusic.png"%>
-		<%= link_to "clients/facebook.png"%>
-		<%= link_to "clients/cdbaby.png"%>
-		<%= link_to "clients/google.png"%>
-		<%= link_to "clients/liike.png"%>
-		<%= link_to "clients/itunes.png"%>
-		<%= link_to "clients/mixcloud.png"%>
-		<%= link_to "clients/soundcloud.png"%>
-		<%= link_to "clients/spotify.png"%>
-		<%= link_to "clients/zune.png"%>
-		
+		<%= image_tag "clients/amazon.png"%>
+		<%= image_tag "clients/beatport.png"%>
+		<%= image_tag "clients/bigcartel.png"%>
+		<%= image_tag "clients/emusic.png"%>
+		<%= image_tag "clients/facebook.png"%>
+		<%= image_tag "clients/cdbaby.png"%>
+		<%= image_tag "clients/google.png"%>
+		<%= image_tag "clients/liike.png"%>
+		<%= image_tag "clients/itunes.png"%>
+		<%= image_tag "clients/mixcloud.png"%>
+		<%= image_tag "clients/soundcloud.png"%>
+		<%= image_tag "clients/spotify.png"%>
+		<%= image_tag "clients/zune.png"%>
+
 	</div>
 </div>
 <!-- CLIENTS -->
