--- a/app/views/albums/_form.html.erb
+++ b/app/views/albums/_form.html.erb
@@ -1,13 +1,13 @@
-<%= simple_form_for(@genre, @album, html: { class: 'form-horizontal' } )do |f| %>
+<%= simple_form_for(@genre, @album, html: { class: 'form-horizontal' } ) do |f| %>
 <div class="wrapper">
   <div class="container">
     <div class="row">
       <div class="col-md-8 col-md-offset-2">
-        <%= f.input :name %>
-        <%= f.input :notes %>
-        <%= f.input :history %>
-        <%= f.input :artist %>
-        <%= f.input :year %>
+        <%= f.input :name, placeholder: "Album name" %>
+        <%= f.input :notes,  placeholder: "Type in notes about the album and producer", :as => :ckeditor, :input_html=> {:ckeditor => {:toolbar => "Full"}}, :rows => 16, :cols => 16 %>
+        <%= f.input :history,  placeholder: "The History", :as => :ckeditor, :input_html=> {:ckeditor => {:toolbar => "Full"}}, :rows => 16, :cols => 16 %>
+        <%= f.input :artist, placeholder: "Who's the artist" %>
+        <%= f.input :year, placeholder: "Type in production Year" %>
         <%= form.input :thumbnail, as: :file %>
         <%= f.collection_select :genre_id, Genre.all, :id, :type, {prompt: "Choose a Genre "} %>
         <%= f.submit :submit, class: "btn btn-default" %>
