--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -1,14 +1,18 @@
 <%= simple_form_for(@blog) do |f| %>
+<div class="wrapper">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8 col-md-offset-2">
   <%= f.error_notification %>
 
-  <div class="form-inputs">
+
     <%= f.input :title %>
     <%= f.input :sub_title %>
     <%= f.input :body %>
-    <%= form.input :thumbnail, as: :file %>
-  </div>
+    <%= f.input :thumbnail, as: :file %>
+
 
   <div class="form-actions">
-    <%= f.button :submit %>
+    <%= f.submit :submit %>
   </div>
 <% end %>
