--- a/app/views/blogs/edit.html.erb
+++ b/app/views/blogs/edit.html.erb
@@ -1,5 +1,14 @@
-<h1>Editing Blog</h1>
-
+<div id="page_head">
+	<div class="container">
+		<div class="col-md-12">
+			<h2>Edit Blog</h2>
+			<ul class="bcrumb">
+				<li><a href="#"><i class="fa fa-home"></i></a><span class="sep"><i class="fa fa-angle-right"></i></span></li>
+				<li>Editing Blog</li>
+			</ul>
+		</div>
+	</div>
+</div>
 <%= render 'form' %>
 
 <%= link_to 'Show', @blog %> |
