--- a/app/views/genres/_form.html.erb
+++ b/app/views/genres/_form.html.erb
@@ -4,9 +4,9 @@
     <div class="row">
       <div class="col-md-8 col-md-offset-2">
 
-        <%= f.input :title %><br />
-        <%=f.input :description %><br />
-        <%= f.input :type %><br />
+        <%= f.input :title, placeholder: "Genre title" %><br />
+        <%=f.input :description,  placeholder: "Genre discription", :as => :ckeditor, :input_html=> {:ckeditor => {:toolbar => "Full"}}, :rows => 16, :cols => 16 %><br />
+        <%= f.input :type, placeholder: "Genre type"%><br />
         <%= form.input :thumbnail, as: :file %>
         <%= f.submit :submit, class: "btn btn-default" %>
       </div>
