--- a/app/views/albums/index.html.erb
+++ b/app/views/albums/index.html.erb
@@ -1,11 +1,11 @@
 <div id="page_head">
 	<div class="container">
 		<div class="col-md-12">
-			<h2>Choose your Genre</h2>
+			<h2>pick an album </h2>
 
 			<ul class="bcrumb">
 				<li><a href="#"><i class="fa fa-home"></i></a><span class="sep"><i class="fa fa-angle-right"></i></span></li>
-				<li>Genres</li>
+				<li>Albums</li>
 
 			</ul>
 		</div>
