--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,7 +1,20 @@
 
 <br>
 <br>
-
+<!-- BLOG-SINGLE -->
+<div class="sp-body">
+	<div class="body">
+		<div class="inner-content">
+			<div class="page-wrapper" >
+				<div id="blog-single">
+					<!-- Post header -->
+					<div id="post-header" class="parallax-parent">
+						<!-- Header image -->
+						<div  class="image-holder">
+							<div class="header-cover">
+                <%= image_tag "banner_blog.jpg", class: "img-fit"  %>
+							</div>
+						</div>
 
 <!-- BLOG-SINGLE -->
 <!-- NEWS / BLOG -->
