--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -12,7 +12,7 @@
 						<!-- Header image -->
 						<div  class="image-holder">
 							<div class="header-cover">
-                <%= image_tag "banner@show", class: "img-fit"  %>
+                <%= image_tag "banner@show.jpg", class: "img-fit"  %>
 							</div>
 						</div>
 						<!-- /Header image -->
