--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -7,12 +7,12 @@
 
 
     <%= f.input :title %>
-    <%= f.input :sub_title %>
-    <%= f.input :body %>
+    <%= f.input :sub_title, :as => :ckeditor, :input_html=> {:ckeditor => {:toolbar => "Full"}}, :rows => 16, :cols => 16  %>
+    <%= f.input :body, :as => :ckeditor, :input_html=> {:ckeditor => {:toolbar => "Full"}}, :rows => 16, :cols => 16  %>
     <%= f.input :thumbnail, as: :file %>
 
 
   <div class="form-actions">
-    <%= f.submit :submit %>
+    <%= f.submit :submit, class: "btn btn-default" %>
   </div>
 <% end %>
