--- a/app/views/tours/_form.html.erb
+++ b/app/views/tours/_form.html.erb
@@ -1,15 +1,19 @@
 <%= simple_form_for(@tour) do |f| %>
+<div class="wrapper">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8 col-md-offset-2">
   <%= f.error_notification %>
 
   <div class="form-inputs">
     <%= f.input :title %>
     <%= f.input :timimg %>
     <%= f.input :date %>
-    <%= f.input :place %>
-    <%= f.input :artist %>
+    <%= f.input :place, :as => :ckeditor, :input_html=> {:ckeditor => {:toolbar => "Full"}}, :rows => 16, :cols => 16  %>
+    <%= f.input :artist, :as => :ckeditor, :input_html=> {:ckeditor => {:toolbar => "Full"}}, :rows => 16, :cols => 16  %>
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit %>
+    <%= f.button :submit, class: "btn btn-default" %>
   </div>
 <% end %>
