--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -85,6 +85,66 @@
 
 <!-- ALBUMS -->
 
+
+
+<!-- PLAYLIST -->
+<div class="playlist-wrap" id="playlist">
+	<div>
+		<div class="content-wrapper fixed left"></div>
+
+		<div class="content-wrapper right" >
+			<div class="content-container">
+				<div id="jquery_jplayer" class="jp-jplayer"></div>
+				<div id="jp_container" class="jp-audio" role="application" aria-label="media player">
+					<div class="jp-type-playlist">
+						<div class="jp-gui jp-interface">
+							<div class="jp-controls">
+								<button class="jp-previous" role="button" tabindex="0">previous</button>
+								<button class="jp-play" role="button" tabindex="0">play</button>
+								<button class="jp-next" role="button" tabindex="0">next</button>
+								<button class="jp-stop" role="button" tabindex="0">stop</button>
+							</div>
+							<div class="jp-progress">
+								<div class="jp-seek-bar">
+									<div class="jp-play-bar"></div>
+								</div>
+							</div>
+							<div class="jp-volume-controls">
+								<button class="jp-mute" role="button" tabindex="0">mute</button>
+								<button class="jp-volume-max" role="button" tabindex="0">max volume</button>
+								<div class="jp-volume-bar">
+									<div class="jp-volume-bar-value"></div>
+								</div>
+							</div>
+							<div class="jp-time-holder">
+								<div class="jp-current-time" role="timer" aria-label="time">&nbsp;</div>
+								<div class="jp-duration" role="timer" aria-label="duration">&nbsp;</div>
+							</div>
+							<div class="jp-toggles">
+								<button class="jp-repeat" role="button" tabindex="0">repeat</button>
+								<button class="jp-shuffle" role="button" tabindex="0">shuffle</button>
+							</div>
+						</div>
+
+						<div class="jp-playlist">
+							<ul>
+								<li>&nbsp;</li>
+							</ul>
+						</div>
+
+						<!-- FlashPlayer Fallback-->
+						<div class="jp-no-solution">
+							<span>Update Required</span>
+							To play the media you will need to either update your browser to a recent version or update your <a href="http://get.adobe.com/flashplayer/" target="_blank">Flash plugin</a>.
+						</div>
+						<!-- /FlashPlayer Fallback-->
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<!-- PLAYLIST -->
 <!-- NEWS / BLOG -->
 <div id="news-wrap">
 	<div class="container">
@@ -146,108 +206,8 @@
 </div>
 <!-- NEWS / BLOG -->
 
-<!-- PLAYLIST -->
-<div class="playlist-wrap" id="playlist">
-	<div>
-		<div class="content-wrapper fixed left"></div>
-
-		<div class="content-wrapper right" >
-			<div class="content-container">
-				<div id="jquery_jplayer" class="jp-jplayer"></div>
-				<div id="jp_container" class="jp-audio" role="application" aria-label="media player">
-					<div class="jp-type-playlist">
-						<div class="jp-gui jp-interface">
-							<div class="jp-controls">
-								<button class="jp-previous" role="button" tabindex="0">previous</button>
-								<button class="jp-play" role="button" tabindex="0">play</button>
-								<button class="jp-next" role="button" tabindex="0">next</button>
-								<button class="jp-stop" role="button" tabindex="0">stop</button>
-							</div>
-							<div class="jp-progress">
-								<div class="jp-seek-bar">
-									<div class="jp-play-bar"></div>
-								</div>
-							</div>
-							<div class="jp-volume-controls">
-								<button class="jp-mute" role="button" tabindex="0">mute</button>
-								<button class="jp-volume-max" role="button" tabindex="0">max volume</button>
-								<div class="jp-volume-bar">
-									<div class="jp-volume-bar-value"></div>
-								</div>
-							</div>
-							<div class="jp-time-holder">
-								<div class="jp-current-time" role="timer" aria-label="time">&nbsp;</div>
-								<div class="jp-duration" role="timer" aria-label="duration">&nbsp;</div>
-							</div>
-							<div class="jp-toggles">
-								<button class="jp-repeat" role="button" tabindex="0">repeat</button>
-								<button class="jp-shuffle" role="button" tabindex="0">shuffle</button>
-							</div>
-						</div>
-
-						<div class="jp-playlist">
-							<ul>
-								<li>&nbsp;</li>
-							</ul>
-						</div>
-
-						<!-- FlashPlayer Fallback-->
-						<div class="jp-no-solution">
-							<span>Update Required</span>
-							To play the media you will need to either update your browser to a recent version or update your <a href="http://get.adobe.com/flashplayer/" target="_blank">Flash plugin</a>.
-						</div>
-						<!-- /FlashPlayer Fallback-->
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-<!-- PLAYLIST -->
-
-
 <!-- TOURS -->
-<div id="tours">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-6">
-				<%= image_tag 'mic.jpg', class: "img-responsive" %>
-			</div>
-			<div class="col-md-6">
-				<div class="col-md-11">
-					<h3>Upcoming Shows</h3>
-					<ul class="tour-list">
-						<li>
-							<div class="tour-date">08<span>Jan<br><em>2016</em></span></div>
-							<div class="tour-info">Melbourne, AU - <a href="#">Rock hall</a></div>
-							<div class="tour-ticket"><a href="#">Buy Ticket</a></div>
-						</li>
-						<li>
-							<div class="tour-date">08<span>Jan<br><em>2016</em></span></div>
-							<div class="tour-info">Melbourne, AU - <a href="#">Rock hall</a></div>
-							<div class="tour-ticket"><a href="#">Buy Ticket</a></div>
-						</li>
-						<li>
-							<div class="tour-date">08<span>Jan<br><em>2016</em></span></div>
-							<div class="tour-info">Melbourne, AU - <a href="#">Rock hall</a></div>
-							<div class="tour-ticket"><a href="#">Buy Ticket</a></div>
-						</li>
-						<li>
-							<div class="tour-date">08<span>Jan<br><em>2016</em></span></div>
-							<div class="tour-info">Melbourne, AU - <a href="#">Rock hall</a></div>
-							<div class="tour-ticket"><a href="#">Buy Ticket</a></div>
-						</li>
-						<li>
-							<div class="tour-date">08<span>Jan<br><em>2016</em></span></div>
-							<div class="tour-info">Melbourne, AU - <a href="#">Rock hall</a></div>
-							<div class="tour-ticket"><a href="#">Buy Ticket</a></div>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
+			<%= render "tours/show" %>
 <!-- TOURS -->
 
 <!-- GALLERY / PORTFOLIO -->
