--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -207,7 +207,7 @@
 <!-- NEWS / BLOG -->
 
 <!-- TOURS -->
-			<%= render "tours/show" %>
+			<%= render "tours/index" %>
 <!-- TOURS -->
 
 <!-- GALLERY / PORTFOLIO -->
