--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -207,7 +207,41 @@
 <!-- NEWS / BLOG -->
 
 <!-- TOURS -->
-			<%= render "tours/index" %>
+<div id="tours">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-6">
+				<%= image_tag 'mic.jpg', class: "img-responsive" %>
+			</div>
+			<div class="col-md-6">
+				<div class="col-md-11">
+					<h3>Upcoming Shows</h3>
+					<ul class="tour-list">
+						<% Tour.all.each do |tour| %>
+
+						<li>
+							<div class="tour-date"><%= tour.date %></div>
+							<div class="tour-info"> <%= link_to tour.title %></div>
+							<div class="tour-ticket"><%= tour.place %></div>
+							<div class="tour-ticket"><%= tour.artist %></div>
+							<div class="tour-ticket"><%= link_to 'View', tour, class: "btn btn-default" %></div>
+
+								</div>
+						</li>
+
+
+
+		<% end %>
+	</ul>
+</div>
+</div>
+</div>
+</div>
+</div>
+
+<br>
+
+
 <!-- TOURS -->
 
 <!-- GALLERY / PORTFOLIO -->
