re launching getting eye tired bro

--- a/app/views/genres/new.html.erb
+++ b/app/views/genres/new.html.erb
@@ -2,8 +2,7 @@
 <div id="page_head">
 	<div class="container">
 		<div class="col-md-12">
-			<h2>Make new genre</h2>
-
+			<h2>Make new Genre</h2>
 			<ul class="bcrumb">
 				<li><a href="#"><i class="fa fa-home"></i></a><span class="sep"><i class="fa fa-angle-right"></i></span></li>
 				<li>Type in a genre</li>
@@ -14,3 +13,6 @@
 </div>
 
     <%= render 'form' %>
+	</div>
+	</div>
+	</div>
