--- a/app/views/tours/new.html.erb
+++ b/app/views/tours/new.html.erb
@@ -1,10 +1,10 @@
 <div id="page_head">
 	<div class="container">
 		<div class="col-md-12">
-			<h2>Make new Album</h2>
+			<h2>New Tour</h2>
 			<ul class="bcrumb">
 				<li><a href="#"><i class="fa fa-home"></i></a><span class="sep"><i class="fa fa-angle-right"></i></span></li>
-				<li>Write The albums</li>
+				<li>Write The Events</li>
 			</ul>
 		</div>
 	</div>
@@ -12,3 +12,6 @@
 <%= render 'form' %>
 
 <%= link_to 'Back', tours_path %>
+</div>
+</div>
+</div>
