--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,6 +1,3 @@
-
-<br>
-<br>
 <!-- BLOG-SINGLE -->
 <div class="sp-body">
 	<div class="body">
@@ -11,7 +8,7 @@
 					<div id="post-header" class="parallax-parent">
 						<!-- Header image -->
 						<div  class="image-holder">
-							<div class="header-cover">
+							<div class="header-cover", style="height:500px;">
                 <%= image_tag "banner_blog.jpg", class: "img-fit"  %>
 							</div>
 						</div>
@@ -22,7 +19,7 @@
 	<div class="container">
 		<div class="section-head text-center">
 			<h2>Latest Blog News today</h2>
-			<h5>Morbi sollic itudin eros erat id pharetra libero fringilla quis.</h5>
+			<h5>Get the latest news on your Favorite Entertainment </h5>
 		</div>
 
 		<section class="news-main" id="news-main">
@@ -51,7 +48,7 @@
 		</section>
 	</div>
 </div>
-<%= link_to 'New Blog', new_blog_path, class: "btn btn-success" %>
+<div class:"text-center"><%= link_to 'New Blog', new_blog_path, class: "btn btn-success" %></div>
 <!-- NEWS / BLOG -->
 </div>
 <!-- BLOG-SINGLE -->
