--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -11,7 +11,7 @@
 					<div id="post-header" class="parallax-parent">
 						<!-- Header image -->
 						<div  class="image-holder">
-							<div class="header-cover">
+							<div class="header-cover" style="height:500px;">
                 <%= image_tag "banner@show.jpg", class: "img-fit"  %>
 							</div>
 						</div>
