--- a/app/views/tours/index.html.erb
+++ b/app/views/tours/index.html.erb
@@ -24,6 +24,10 @@
 
     <% end %>
   </ul>
+  <div class="text-center">
+  <%= link_to 'New Tour', new_tour_path, class: "btn btn-default" %>
+</div>
+
 </div>
 </div>
 </div>
@@ -31,5 +35,3 @@
 </div>
 
 <br>
-
-<%= link_to 'New Tour', new_tour_path %>
