edit sub-title todo many small stuff

--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -51,7 +51,7 @@
 									<div class="post mb-xlarge">
 										<!-- Post Content -->
 										<div id="post-content">
-											<p><%= @blog.sub_title %></p>
+											<p><%= raw(@blog.sub_title) %></p>
 											<blockquote>
                         <%= image_tag @blog.thumbnail.url(:medium), class: "img-responsive" %></p>
 											</blockquote>
